samples/_failures_safe/1761450199_516034_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4643e143.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_4643e143.c:154:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  154 |             Token token
      |             ^~~~~
./samples/SAFE/__tmp_4643e143.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4643e143.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4643e143.c:154:13: error: expected declaration or statement at end of input
